<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="171dp"
        android:contentDescription="@string/txtLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/persona"
        android:layout_width="53dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toStartOf="@+id/usuarioInput"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:srcCompat="@drawable/usuario"
        android:contentDescription="@string/imagen_usuario" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usuarioInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="88dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo">

        <EditText
            android:id="@+id/usuario"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:hint="@string/usuario"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonRecuperar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="106dp"
        android:text="@string/txtRecuperar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioInput" />

    <TextView
        android:id="@+id/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancelarRecuperarContrasena"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonRecuperar" />

</androidx.constraintlayout.widget.ConstraintLayout>